# Geometric_data_analysis_project

./: .gitignore  .gitmodules  README.md  pyproject.toml  requirements-env.txt
experiments/: fused_on_diet.py  fused_on_simul.py  lea_main.py  main_diet.ipynb  main_synthetic.ipynb
tests/: perturb_multi.ipynb  perturb_multi_colab.ipynb  synthetic_data.py
