[project]
name = "geometric-data-analysis-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anndata>=0.12.6",
    "datasets>=4.4.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "scanpy>=1.11.5",
    "scikit-learn>=1.7.2",
]
